--- a/listado-personas/package.json
+++ b/listado-personas/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.2.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "firebase": "^6.0.4",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
